# emu8051

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in
build-aux/: .gitignore  gitlog-to-changelog
config/: debug.m4  gtk2.m4
data/: Makefile.am  emu8051.conf
doc/: Makefile.am  emu8051.man
pixmaps/: reset.xpm  run.xpm  step.xpm  stop.xpm
src/: CPU8051.cpp  CPU8051.hpp  EmuConsole.cpp  EmuConsole.hpp  EmuGtk.cpp  EmuGtk.hpp  Inst_Def.hpp  Inst_Imp.cpp  Keyboard.hpp  Makefile.am  MemWin.cpp  MemWin.hpp  Memory.cpp  Memory.hpp  Opcode2cpp.pl  PgmWin.cpp  PgmWin.hpp  Reg8051.hpp  RegWin.cpp  RegWin.hpp  app-config.c  app-config.h  common.h  cpu8051.c  cpu8051.h  disasm.hpp  emuconsole.c  emugtk.c  emugtk.h  exceptions.hpp  file.c  file.h  filemenu.c  filemenu.h  gtksizes.h  helpmenu.c  helpmenu.h  hexfile.c  hexfile.h  keyboard.c  (+26 more)
src/cli/: Makefile.am  emuconsole.c  keyboard.c  keyboard.h  main.c  menu.c  menu.h  parser.y  scanner.l
src/common/: Makefile.am  common.h  cpu8051.c  cpu8051.h  device.c  device.h  exectrace.c  exectrace.h  gp_timers.c  gp_timers.h  hardware.c  hardware.h  hexfile.c  hexfile.h  interrupt.c  interrupt.h  iotrace.c  iotrace.h  kb9012.c  kb9012.h  log.c  log.h  memory.c  memory.h  opcode2c.pl  opcodes.lst  opcodes2c.pl  operations.c  operations.h  options.c  options.h  psw.c  psw.h  reg8051.h  regkb9012.h  serial.c  serial.h  sfr.c  sfr.h  timers.c  (+1 more)
src/gtk/: Makefile.am  app-config.c  app-config.h  emugtk.c  emugtk.h  filemenu.c  filemenu.h  helpmenu.c  helpmenu.h  main.c  main.h  memwin.c  memwin.h  messagebox.c  messagebox.h  pgmwin.c  pgmwin.h  pswwin.c  pswwin.h  regwin.c  regwin.h  timerwin.c  timerwin.h  viewmenu.c  viewmenu.h
test-files/: test.hex  timer.hex
test_files/: siae1.hex
tests/: .gitignore  Makefile.am  add.asm  anl.asm  cmd.sh  cmd_de.sh  cmd_di.sh  cmd_dp.sh  cmd_dr.sh  cmd_we.sh  cmd_wi.sh  cmd_wp.sh  cmd_wr.sh  div.asm  div32u.asm  mov.asm  mul1.asm  mul2.asm  opcodes  opcodes.sh  orl.asm  sqroot.asm  test-cjne.hex  timer.asm  timer0.asm  timer1.asm  timer2.asm
